# simple-cpp-devenv

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: CMakeLists.txt  main.cc
